--- a/src/components/atoms/Button/Button.module.css
+++ b/src/components/atoms/Button/Button.module.css
@@ -1,5 +1,7 @@
 .btn {
   display: inline-flex;
+  width: max-content;
+  height: max-content;
   align-items: center;
   justify-content: center;
   font-family: var(--font-family-base);
@@ -17,7 +19,6 @@
   color: var(--color-white);
 }
 
-/* Variantes */
 .primary {
   background-color: var(--color-primary);
 }
