--- a/src/components/atoms/DatePicker/DatePicker.module.css
+++ b/src/components/atoms/DatePicker/DatePicker.module.css
@@ -57,3 +57,8 @@
   background-color: var(--color-primary);
   color: var(--color-white);
 }
+
+.inputError {
+  border-color: var(--color-danger);
+  box-shadow: 0 0 0 2px rgba(230, 57, 70, 0.2);
+}
